--- a/views/viaje.pug
+++ b/views/viaje.pug
@@ -4,7 +4,7 @@ block contenido
     main.container.mt-5
         .row
             .col-md-5
-                img(src=`/img/destinos_${resultado.imagen}_ln.jpg`, alt="imagen viaje", class="img-fluid")
+                img(src=`/img/destinos_${resultado.imagen}`, alt="imagen viaje", class="img-fluid")
             .col-md-7
                 h1 #{resultado.titulo}
                 p
