--- a/views/viajes.pug
+++ b/views/viajes.pug
@@ -7,7 +7,7 @@ block contenido
                 each viaje in viajes
                     .col-md-6.col-lg-4.mb-4
                         .card
-                            img.card-img-top(src=`/img/destinos_${viaje.imagen}.jpg`)
+                            img.card-img-top(src=`/img/destinos_${viaje.imagen}`)
                             .card-body
                                 h2=viaje.titulo
                                 p
